fix logo alignment

--- a/style.css
+++ b/style.css
@@ -88,7 +88,8 @@ body {
 }
 
 .wrapper .logo {
-    width: 100%;
+    width: 60%;
+    margin-inline: auto;
     margin-bottom: 1rem;
 }
 
